--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
 
-API_KEY=
-AUTH_DOMAIN=
-PROJECT_ID=
-STORAGE_BUCKET=
-MESSAGING_SENDER_ID=
-APP_ID=
+EXPO_PUBLIC_API_KEY=
+EXPO_PUBLIC_AUTH_DOMAIN=
+EXPO_PUBLIC_PROJECT_ID=
+EXPO_PUBLIC_STORAGE_BUCKET=
+EXPO_PUBLIC_MESSAGING_SENDER_ID=
+EXPO_PUBLIC_APP_ID=
